Thêm csdl cho giỏ hàng.